--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,15 @@
 <div class="section no-pad-bot" id="index-banner">
   <div class="container">
-    <br><br>
+    <br>
+    <br>
     <h1 class="header center orange-text">Master Food</h1>
     <div class="row center">
-      <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+      <h5 class="header col s12 light">Em tempos de crise economizar na hora de pedir a sua comida é a chave!</h5>
+      <button mz-button [routerLink]="['/listar-restaurantes']">
+        Restaurantes
+      </button>
     </div>
-
-    <br><br>
-
+    <br>
+    <br>
   </div>
 </div>
