--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,12 @@
 <footer class="page-footer red darken-1">
+
+  <div class="fixed-action-btn ">
+    <button mz-button [float]="true">
+      <i mz-icon-mdi mz-input-prefix [icon]="'message'">
+      </i>
+    </button>
+  </div>
+
   <div class="container">
     <div class="row">
       <div class="col l6 s12">
@@ -7,32 +15,47 @@
 
       </div>
 
-        <div class="col l3 s12">
-          <h5 class="white-text">Settings</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
-          </ul>
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Social Media</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
-          </ul>
-        </div>
+      <div class="col l3 s12">
+        <h5 class="white-text">Settings</h5>
+        <ul>
+          <li>
+            <a class="white-text" href="#!">Link 1</a>
+          </li>
+          <li>
+            <a class="white-text" href="#!">Link 2</a>
+          </li>
+          <li>
+            <a class="white-text" href="#!">Link 3</a>
+          </li>
+          <li>
+            <a class="white-text" href="#!">Link 4</a>
+          </li>
+        </ul>
+      </div>
+      <div class="col l3 s12">
+        <h5 class="white-text">Social Media</h5>
+        <ul>
+          <li>
+            <a class="white-text" href="#!">Link 1</a>
+          </li>
+          <li>
+            <a class="white-text" href="#!">Link 2</a>
+          </li>
+          <li>
+            <a class="white-text" href="#!">Link 3</a>
+          </li>
+          <li>
+            <a class="white-text" href="#!">Link 4</a>
+          </li>
+        </ul>
+      </div>
 
     </div>
   </div>
-  <div class="footer-copyright" >
+  <div class="footer-copyright">
     <div class="container">
-      Made by <a class="orange-text text-lighten-3" href="#">Wire Labs</a>
+      Made by
+      <a class="orange-text text-lighten-3" href="#">Wire Labs</a>
     </div>
   </div>
 </footer>
-
-
