--- a/src/app/admin/cadastro-restaurantes/cadastro-restaurantes.component.html
+++ b/src/app/admin/cadastro-restaurantes/cadastro-restaurantes.component.html
@@ -19,7 +19,7 @@
     </div>
   </div>
   <div class="row">
-    <button mz-button class="left blue">
+    <button mz-button class="left blue" [routerLink]="['../form-restaurante']">
       <i mz-icon-mdi [icon]="'plus-circle-outline'">
       </i>
     </button>
