--- a/src/app/listar-restaurantes/listar-restaurantes.component.html
+++ b/src/app/listar-restaurantes/listar-restaurantes.component.html
@@ -1,8 +1,17 @@
 <mf-header></mf-header>
 <div class="section no-pad-bot">
   <div class="container">
-    <br>
-    <br>
+    <div class="center" *ngIf="!restaurantes">
+      <br>
+      <br>
+      <mz-spinner [color]="'yellow'" [size]="'big'">
+      </mz-spinner>
+      <br>
+      <br>
+      <br>
+      <br>
+    </div>
+
     <div class="row">
       <div *ngFor="let restaurante of restaurantes" class="col s12 m6 l4">
         <mf-restaurante [restaurante]="restaurante"></mf-restaurante>
