criando tela de cardapio

--- a/src/app/restaurante/restaurante.component.html
+++ b/src/app/restaurante/restaurante.component.html
@@ -1,4 +1,4 @@
-<mz-card class="card horizontal" [hoverable]="true" [routerLink]="['/home']">
+<mz-card class="card horizontal" [hoverable]="true" [routerLink]="['/cardapio-restaurante']">
   <mz-card-title style="padding-left: 7px;">
     <div class="card-image left">
       <img src="{{restaurante.imagePath}}" style="width:135px !important;height:100px !important;" />
