--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
     <h1 class="header center orange-text">Master Food</h1>
     <div class="row center">
       <h5 class="header col s12 light">Em tempos de crise economizar na hora de pedir a sua comida é a chave!</h5>
-      <button mz-button [routerLink]="['/listar-restaurantes']">
+      <button mz-button [routerLink]="['/restaurantes']">
         Restaurantes
       </button>
     </div>
